fix(select): options should be visible on windows (#20)

--- a/packages/core/src/components/select/_select.scss
+++ b/packages/core/src/components/select/_select.scss
@@ -75,6 +75,10 @@
   &--active {
     border-color: $ray-color-blue-50;
 
+    .#{$ray-class-prefix}select__input {
+      color: $ray-color-black;
+    }
+
     .#{$ray-class-prefix}select__label {
       @include label--active;
       color: $ray-color-blue-50;
